feat: Upgrade Java to 21, update Docker image name to `hexagonal-architecture-masterclass`, and configure `git-commit-id-maven-plugin` to not fail on missing Git directory.